--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Cormorant:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>Prima-Materia</title>
 </head>
 
 <body>
